Better fix for placeholderfield layout: overflow-x
By doing an overflow-y, the YUI popup dialog is cropped at the bottom.

--- a/fluent_contents/static/fluent_contents/admin/cp_admin.css
+++ b/fluent_contents/static/fluent_contents/admin/cp_admin.css
@@ -241,7 +241,7 @@ body.cp-single-placeholder #tab-orphaned .cp-item-move { display: inline; }  /* 
 
   /* establish block context, fix jumping effect when adding first item.
      Also moves the item to the right of the label (9em+10px) */
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .wide .cp-placeholderfield {
